A few changes to some things in bio

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,3 +1,7 @@
 {
-  "accentColor": ""
+  "accentColor": "",
+  "cssTheme": "Obsidian gruvbox",
+  "enabledCssSnippets": [
+    "obsidian-workspace-background(Shiba Uni Theme)"
+  ]
 }
