Added a few more notes to each section. Also added a few more extensions for ease of use. Spaced repitition is incredible

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "",
-  "cssTheme": "Obsidian gruvbox",
+  "cssTheme": "AnuPpuccin",
   "enabledCssSnippets": [
     "obsidian-workspace-background(Shiba Uni Theme)"
   ]
