Added more info to bio and some stuff to chem

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,6 @@
   "alwaysUpdateLinks": true,
   "showLineNumber": true,
   "vimMode": false,
-  "legacyEditor": false
+  "legacyEditor": false,
+  "attachmentFolderPath": "Media"
 }
