--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,13 @@
   "showLineNumber": true,
   "vimMode": false,
   "legacyEditor": false,
-  "attachmentFolderPath": "Media"
+  "attachmentFolderPath": "Media",
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "2",
+    "downscalePercent": 100
+  },
+  "tabSize": 4
 }
