--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "alwaysUpdateLinks": true,
   "showLineNumber": true,
-  "vimMode": false,
+  "vimMode": true,
   "legacyEditor": false,
   "attachmentFolderPath": "Media",
   "pdfExportSettings": {
