added some intro info  to functional gr groups

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -6,5 +6,6 @@
   ],
   "baseFontSize": 22,
   "textFontFamily": "Hack",
-  "interfaceFontFamily": "Hack"
+  "interfaceFontFamily": "Hack",
+  "theme": "obsidian"
 }
